--- a/guild-manager-client/src/app/app.component.scss
+++ b/guild-manager-client/src/app/app.component.scss
@@ -10,3 +10,10 @@
   border-radius: 5px;
   cursor: pointer;
 }
+
+.avatar {
+  width: 40px;
+  height: 40px;
+  background-size: cover;
+  border-radius: 50%;
+}
